Wed Dec 01 05:59:24 GMT 2004  Olly Betts <olly@survex.com>

	* NEWS: It's now tomorrow, so bump the 0.8.4 release date.

Wed Dec 01 05:57:41 GMT 2004  Olly Betts <olly@survex.com>

	* tcl8/docs/examples/simplesearch.tcl: Need Tcl 8.1 or later.

Wed Dec 01 05:54:45 GMT 2004  Olly Betts <olly@survex.com>

	* tcl8/docs/examples/simpleindex.tcl: Tweaked to actually work.

Wed Dec 01 05:18:18 GMT 2004  Olly Betts <olly@survex.com>

	* tcl8/docs/examples/simpleindex.tcl: Simpler, more idiomatic code
	  which doesn't rely on features added since Tcl 8.1.

Tue Nov 30 22:42:14 GMT 2004  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Updated for 0.8.4 release.

Mon Nov 29 04:17:42 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac,csharp/Makefile.am,guile/Makefile.am,php4/Makefile.am,
	  python/Makefile.am,tcl8/Makefile.am: Instead of requiring the user
	  to have a really recent SWIG installed, ship the files SWIG
	  generates.  Disable all the SWIG rules unless configure is run
	  with --enable-maintainer-mode to make sure they aren't triggered
	  accidentally by make with dodgy VPATH or anything else.
	* csharp/Makefile.am: Updated the list of generated .cs files to
	  include the subclasses of Weight.

Sun Nov 28 02:51:37 GMT 2004  Olly Betts <olly@survex.com>

	* csharp/TODO: Note that SWIG 1.3.23 apparently implements optional
	  parameters for C#.

Sun Nov 28 01:50:45 GMT 2004  Olly Betts <olly@survex.com>

	* csharp/Makefile.am: Wrapping for Xapian::Weight means we need to add
	  Weight.cs to the list of generated sources.

Sat Nov 27 03:00:24 GMT 2004  Olly Betts <olly@survex.com>

	* xapian.i: Mark Weight as needing a director for Python.

Tue Nov 16 02:59:18 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac,csharp/Makefile.am,guile/Makefile.am,php4/Makefile.am,
	  python/Makefile.am,tcl8/Makefile.am: Use newly added option
	  `xapian-config --swigflags` which (a) avoids always passing