@@ -10,7 +10,7 @@ Vendor: www.xapian.org
 Group: Development/Libraries
 URL: http://www.xapian.org/
 Requires: xapian-core-libs = %{version}
-BuildRequires: swig >= 1.3.20, python-devel >= 2.3, php-devel >= 4.3, tcl-devel >= 8.4
+BuildRequires: python-devel >= 2.3, php-devel >= 4.3, tcl-devel >= 8.4
 Source0: http://www.oligarchy.co.uk/xapian/%{version}/%{name}-%{version}.tar.gz
 Buildroot: %{_tmppath}/%{name}-%{version}-%{release}-root
 
@@ -59,7 +59,7 @@ files needed for developing TCL scripts which use Xapian.
 %build
 # These options and BuildRequires should ensure we build only the Python, PHP
 # and TCL bindings
-%configure --without-java --without-guile
+%configure --without-java --without-guile --without-csharp
 make
 
 %install
@@ -71,6 +71,7 @@ mkdir -p %{buildroot}
 mkdir -p %{buildroot}/usr/share/doc/
 mv %{buildroot}%{buildroot}/usr/share/doc/%{name}/python %{buildroot}/usr/share/doc/%{name}-python-%{version}
 mv %{buildroot}%{buildroot}/usr/share/doc/%{name}/php %{buildroot}/usr/share/doc/%{name}-php4-%{version}
+mv %{buildroot}%{buildroot}/usr/share/doc/%{name}/tcl8 %{buildroot}/usr/share/doc/%{name}-tcl8-%{version}
 rm -rf %{buildroot}%{buildroot}/usr/share/doc/%{name}/
 
 %clean
@@ -95,4 +96,5 @@ rm -rf %{buildroot}%{buildroot}/usr/share/doc/%{name}/
 
 %files tcl8
 %defattr(-, root, root)
-/usr/share/tcl8.4/xapian.so
+/usr/share/xapian%{version}
+%doc /usr/share/doc/%{name}-tcl8-%{version}
